Bug 222594 - Wrong calendar by default when creating a new event
Summary: Wrong calendar by default when creating a new event
Status: RESOLVED FIXED
Alias: None
Product: korganizer
Classification: Applications
Component: general (other bugs)
Version First Reported In: 4.3
Platform: Compiled Sources Linux
: LO normal
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-01-13 22:07 UTC by Sabine Faure
Modified: 2012-06-09 09:46 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Sabine Faure 2010-01-13 22:07:09 UTC
Version:            (using Devel)
Compiler:          gcc 4.3.2 
OS:                Linux
Installed from:    Compiled sources

- Open Kontact and go to Korganizer.
- Create two calendars (They must be using an akonadi ressource): Agenda and a shared folder called Boss
- Check the Agenda check box (and not the Boss one) in the bottom left view.
- Click on the new Event button:

By default the chosen calendar in the 'New Event' dialogue is Boss and not Agenda (my personal calendar) which is confusing.

Akonadi-ports branch, Svn Rev 1074068
Comment 1 Tobias Koenig 2010-05-12 09:55:31 UTC
SVN commit 1125757 by tokoe:

Preselect the currently selected collection inside the
incidence editor dialogs.

BUG: 222594


 M  +37 -8     actionmanager.cpp  
 M  +7 -0      actionmanager.h  
 M  +5 -0      akonadicollectionview.cpp  
 M  +46 -2     calendarview.cpp  
 M  +7 -0      calendarview.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1125757
Comment 2 Sabine Faure 2010-05-13 00:54:31 UTC
It does not seem to work.

Whichever calendar I select from the folders/resources view I always have the same different one selected by default in the new event dialogue.

So I am reopening this bug.

Trunk, Svn Rev 1125914
Comment 3 Sergio Martins 2010-05-16 00:23:21 UTC
The default calendar is the one that's has the bold font in the resource view (bottom left).

Checking and unchecking only influences filtering (hiding/showing) incidences in the views.

So, if you right click on a collection in resource view, choose "Set as default calendar", then open the "New Event" dialog.

You'll see that the selected collection in the combo is the one you chose.
Comment 4 Sabine Faure 2010-05-18 19:14:58 UTC
This still does not work properly so I am reopening this bug.

I see, it seems that I tested this incorrectly indeed. Thx for pointing that out Sergio ;o)

However, there seems to be a problem left so I am reopening this bug:

Here are the steps to reproduce:
- Launch Kontact
- Go to KOrg
- Set two calendars using Kolab resources
- Right click on one of them and select 'Use as Default Calendar'
- The chosen calendar is displayed in bold in the folders/resources view
- Click on 'New event' button

The default calendar used is not the same one as the one in Bold whereas it should be.

Note: if creating an event by right clicking inside the agenda view then it works fine. The set default calendar is used automatically to create the new event.

Trunk, Svn Rev 1128166
Comment 5 Sergio Martins 2010-08-15 21:13:54 UTC
Fixed in trunk r1164071.

Won't backport to 4.5 because in trunk we use incidenceeditors-ng.
Comment 6 Jeroen van Meeuwen (Kolab Systems) 2012-06-09 09:46:32 UTC
Seems to work fine indeed, closing ticket.