Preselect the currently selected collection inside the incidence editor dialogs.

BUG: 222594

svn path=/trunk/KDE/kdepim/; revision=1125757